discussion/kv_engine/128225/128225_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-39421 Remove magma SoftDeleteKVStore

This routine is no longer needed because magma will add atomic kvstore
operations for create and delete kvstore with CBSS-457.

Change-Id: I30012f55f60212fa532f9659d1f98dc3e3006fdf

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Scott Lashley
Date: 2020-05-15 19:42:44.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Scott Lashley
Date: 2020-05-15 19:44:10.000000000
Message: 
Patch Set 1:

Before CBSS-457 can be checked into magma, we need to update kv engine magma code.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-05-15 19:47:26.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/28102/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/28102/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/24059/ : ABORTED

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:837:10:
error: cannot decompose non-class, non-array type "unsigned int"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/24059/ )

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/24059/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3683/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3659/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2222/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:837:10: error: cannot decompose non-class, non-array type "unsigned int" [clang-diagnostic-error]
    auto [status, kvsRev] = magma->GetKVStoreRevision(vbid.get());
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:904:10: error: cannot decompose non-class, non-array type "unsigned int" [clang-diagnostic-error]
    auto [status, kvsRev] = magma->GetKVStoreRevision(vbid.get());
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2222/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:837:10:
error: cannot decompose non-class, non-array type "unsigned int" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2222/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2753/ : FAILURE

Compile error at [2020-05-15T19:44:56.752Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:837:10:
error: cannot decompose non-class, non-array type "unsigned int"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2753/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3746/ : FAILURE

Compile error at [2020-05-15T19:43:58.093Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:837:10:
error: cannot decompose non-array non-class type ?unsigned int?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3746/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/11532/ : FAILURE

Compile error at [2020-05-15T19:45:41.965Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:837:10:
error: cannot decompose non-array non-class type ?unsigned int?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/11532/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/738/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
